# pragma-node-benchmark

./: README.md  bun.lockb  index.ts  package.json  pyth.ts
python/: .gitignore
python/benchmarking/: README.md  pyproject.toml  requirements.txt
python/benchmarking/benchmarking/: CLI_monitoring.py  GUI_monitoring.py  main.py  pragma.py  price_collector.py  pyth.py  pyth_fetcher.py  stork_fetcher.py
typescript/: bun.lockb  package.json
typescript/src/price-consitency/: index.ts  pyth.ts
