[tool.poetry]
name = "benchmarking"
version = "0.1.0"
description = ""
authors = ["azurwastaken <caseaux.maxime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
aiohttp = "^3.10.10"
websockets = "^13.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
